// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer renders footerLink styles added 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-4 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-6 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-8 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<footer
    class="emotion-0 emotion-1"
  >
    <nav
      class="emotion-2 emotion-3"
    >
      <ul
        class="emotion-4 emotion-5"
      >
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/"
            style="color: rgb(255, 255, 255);"
          >
            Home
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/palette"
            style="color: rgb(255, 255, 255);"
          >
            Palette
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/api-page"
            style="color: rgb(255, 255, 255);"
          >
            API
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/about"
            style="color: rgb(255, 255, 255);"
          >
            About
          </a>
        </li>
      </ul>
    </nav>
  </footer>
</DocumentFragment>
`;

exports[`Footer renders without crashing 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 5rem 0 1rem;
  text-align: center;
  width: 100%;
}

.emotion-4 {
  list-style: none;
  margin: 0 0 1rem;
  padding: 0;
}

.emotion-6 {
  display: inline-block;
  padding: 0 1rem;
}

.emotion-8 {
  color: currentColor;
  -webkit-transition: color 400ms ease-in;
  transition: color 400ms ease-in;
}

<footer
    class="emotion-0 emotion-1"
  >
    <nav
      class="emotion-2 emotion-3"
    >
      <ul
        class="emotion-4 emotion-5"
      >
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/palette"
          >
            Palette
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/api-page"
          >
            API
          </a>
        </li>
        <li
          class="emotion-6 emotion-7"
        >
          <a
            class="emotion-8 emotion-9"
            href="/about"
          >
            About
          </a>
        </li>
      </ul>
    </nav>
  </footer>
</DocumentFragment>
`;
